@@ -1,3 +1,10 @@
+2015-05-06  kitone  <kitone@gna.org>
+
+	* src/gui/textviewcell.cc:
+	* src/gui/textviewcell.h:
+	* src/subtitleview.cc:
+	Fix bug #23569 : Cursor cannot be moved with mouse when editing subtitles.
+
 2015-04-30  kitone  <kitone@gna.org>
 
 	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
